Update to surefire to run tests with JDK 1.4.2  - Thanks to Dan Kulp for this fix.