@@ -194,6 +194,8 @@
                     <configuration>
                         <reportFormat>brief</reportFormat>
                         <useFile>false</useFile>
+                        <argLine>-Djava.endorsed.dirs=${basedir}/endorsed</argLine>
+                        <forkMode>once</forkMode>
                         <childDelegation>false</childDelegation>
                         <includes>
                             <include>**/PackageTests.java</include>
